--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "keepitquiet",
-  "version": "1.0.0",
+  "version": "1.0.1",
   "description": "",
   "main": "index.js",
   "scripts": {
@@ -10,9 +10,11 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "cheerio": "^1.0.0-rc.12",
     "dotenv": "^16.3.1",
     "fs": "^0.0.1-security",
     "md5": "^2.3.0",
+    "node-fetch": "^2.6.7",
     "puregram": "^2.11.0",
     "simple-rc4": "^0.0.1-b"
   }
