--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "keepitquiet",
-  "version": "1.0.2",
+  "version": "1.2.1",
   "description": "",
   "main": "index.js",
   "scripts": {
@@ -13,6 +13,7 @@
     "cheerio": "^1.0.0-rc.12",
     "dotenv": "^16.3.1",
     "fs": "^0.0.1-security",
+    "js-sha1": "^0.6.0",
     "md5": "^2.3.0",
     "node-fetch": "^2.6.7",
     "puregram": "^2.11.0",
